trunk/Archive2/2e/41ffe6b393c994/output
main.cpp: In function 'int main()':
main.cpp:18:6: error: no match for 'operator=' (operand types are 'boost::logic::tribool' and 'std::vector<bool>::reference {aka std::_Bit_reference}')
     a=bs[0];
      ^
main.cpp:18:6: note: candidates are:
In file included from main.cpp:1:0:
/usr/local/include/boost/logic/tribool.hpp:72:7: note: boost::logic::tribool& boost::logic::tribool::operator=(const boost::logic::tribool&)
 class tribool
       ^
/usr/local/include/boost/logic/tribool.hpp:72:7: note:   no known conversion for argument 1 from 'std::vector<bool>::reference {aka std::_Bit_reference}' to 'const boost::logic::tribool&'
/usr/local/include/boost/logic/tribool.hpp:72:7: note: boost::logic::tribool& boost::logic::tribool::operator=(boost::logic::tribool&&)
/usr/local/include/boost/logic/tribool.hpp:72:7: note:   no known conversion for argument 1 from 'std::vector<bool>::reference {aka std::_Bit_reference}' to 'boost::logic::tribool&&'
